# tes-camera

./: .gitignore  CMakeLists.txt  README.md  main.py  startup.sh
dev/: socket_dev_server.cpp  socket_dev_server.py
esp32/: config.json  controller.py  main.py  multicamera.py  uart_test.py  wifi_test.py
esp32/include/: camera.py  connectionManager.py  multicamera.py
include/: camera.py  camera_controller.py  config.json  config_manager.py  connection_manager.py  database_handler.py  esp32_controller.py  horizon_tracker.py  recognition.py
src/: client_socket.cpp  database_handler.cpp  main.cpp
src/python/: python_executer.cpp  python_executer.h
